--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-mdx": "^1.8.0",
+    "gatsby-source-filesystem": "^2.9.0",
+    "mdx-utils": "^0.2.0",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
